--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
-    <string name="app_name">Lab1</string>
+    <string name="app_name">PairODice</string>
 
     <string name="roll_die">Roll Dice</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_activity2">activity2</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
